# misery

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  packet.rs
server/: Cargo.toml
server/src/: lib.rs
