[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
server = { path = "../server" }
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
